# ossie

./: CONTRIBUTING.md  README.md  ROADMAP.md
converters/honeydew/: .gitignore  README.md  pyproject.toml
converters/honeydew/src/: honeydew_osi_converter.py
converters/honeydew/tests/: test_honeydew_osi_converter.py
converters/orionbelt/: README.md  osi_obml_mapping_analysis.md  osi_obml_ontology_mapping_analysis.md  pyproject.toml
converters/orionbelt/src/ossie_orionbelt/: __init__.py  cli.py  converter.py  obml_to_osi.py  ontology.py  osi_to_obml.py  validation.py
converters/orionbelt/tests/: test_osi_converter_cumulative.py  test_osi_converter_filters.py  test_osi_converter_measure_overrides.py  test_osi_converter_ontology.py  test_osi_converter_pop.py  test_osi_converter_properties.py  test_osi_converter_trend_v26.py  test_osi_converter_vendors.py  test_osi_metric_no_silent_loss.py  test_osi_tpcds_baseline.py  test_osi_v02_compat.py
converters/orionbelt/tests/fixtures/: obml_as_osi.yaml
converters/polaris/: pom.xml
converters/salesforce/: pom.xml
converters/salesforce/src/main/resources/: mappings.yaml
core-spec/: osi-schema.json  spec.md  spec.yaml
docs/: working_groups.md
examples/: flights.yaml
ontology/: ontology.json  ontology.md
validation/: validate.py
